Fixed Layout issue

--- a/css/style.css
+++ b/css/style.css
@@ -39,16 +39,15 @@ div.sub-row1{
 }
 div.sub-row21,div.sub-row22{
       float:left;
-      height: 100%;
+      height: 97%;
 
 }
 div.sub-row21{
-        width: 59%;
+        width: 58.6%;
         border: 1px solid black;
-
 }
 div.sub-row22{
-        width: 39.8%;
+        width: 39.7%;
         border: 1px solid black;
 
 }
